--- a/maven-projects/arduino-base/pom.xml
+++ b/maven-projects/arduino-base/pom.xml
@@ -22,6 +22,10 @@
 			<groupId>org.rxtx</groupId>
 			<artifactId>rxtx</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>br.com.cams7.sisbarc</groupId>
+			<artifactId>sisbarc-base</artifactId>
+		</dependency>
 	</dependencies>
 
 	<build>
